data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_418.wast
;; 9. **Test Description**: A heavily recursive loop block that conditionally appends to a block; inadvertent continuous recursion without proper bounds checks leading to `unreachable`:    - **Constraint Checked**: Ensure bounds and stack checks for recursive loops.    - **Unreachable Code Execution**: Stack overflow or mismanaged recursion may inadvertently reach `unreachable`.

(assert_invalid
  (module (func $recursion-loop
    (i32.const 0) (loop (param i32) (br 0))
  ))
  "unreachable"
)